# sysopy

./: README.md
KotulaMichal/cw01/standard/: CMakeLists.txt  Makefile
KotulaMichal/cw01/standard/include/: common.hpp  defines.hpp  includes.hpp
KotulaMichal/cw01/standard/include/pair/: pair.hpp
KotulaMichal/cw01/standard/include/string/: string.hpp
KotulaMichal/cw01/standard/include/vector/: vector.hpp
KotulaMichal/cw01/standard/src/string/: string.cpp
KotulaMichal/cw01/zad1/: CMakeLists.txt  Makefile
KotulaMichal/cw01/zad1/include/diff/: common.hpp  defines.hpp  diff_library.hpp  includes.hpp
KotulaMichal/cw01/zad1/src/diff/: diff_functions.cpp
KotulaMichal/cw01/zad2/: CMakeLists.txt  Makefile
KotulaMichal/cw01/zad2/src/: main.cpp  time.cpp  time.hpp
KotulaMichal/cw01/zad2/test/big/: b.txt  c.txt
KotulaMichal/cw01/zad2/test/medium/: c.txt
KotulaMichal/cw01/zad2/test/small/: a.txt
KotulaMichal/cw01/zad3a/: Makefile
KotulaMichal/cw01/zad3a/test/big/: a.txt
KotulaMichal/cw01/zad3a/test/medium/: a.txt  b.txt
KotulaMichal/cw01/zad3b/: Makefile
KotulaMichal/cw01/zad3b/test/big/: d.txt
KotulaMichal/cw01/zad3b/test/medium/: d.txt
KotulaMichal/cw01/zad3b/test/small/: b.txt
KotulaMichal/cw02/zad1/: CMakeLists.txt  Makefile
KotulaMichal/cw02/zad1/src/: main.c
KotulaMichal/cw02/zad2/: Makefile
KotulaMichal/cw02/zad2/src/: main.c
KotulaMichal/cw03/zad1/: CMakeLists.txt
KotulaMichal/cw03/zad1/src/: main.c
KotulaMichal/cw03/zad2/: Makefile
KotulaMichal/cw03/zad2/include/: common.h
KotulaMichal/cw03/zad2/src/: child.c  common.c  main.c
KotulaMichal/cw03/zad3/: CMakeLists.txt  Makefile
KotulaMichal/cw03/zad3/cmake/: common.cmake
KotulaMichal/cw03/zad3/src/: child.c  generator.c  main.c  tester.c
KotulaMichal/cw04/zad1/: CMakeLists.txt
KotulaMichal/cw04/zad1/src/: main.c
KotulaMichal/cw04/zad2/: CMakeLists.txt
KotulaMichal/cw04/zad2/src/: child.c  main.c
KotulaMichal/cw04/zad3/: CMakeLists.txt
KotulaMichal/cw04/zad3/src/: main.c
KotulaMichal/cw04/zad4/: CMakeLists.txt
KotulaMichal/cw04/zad4/src/: catcher.c  sender.c
KotulaMichal/cw05/zad1/: CMakeCache.txt  Makefile  cmake_install.cmake  zad1.cbp
KotulaMichal/cw05/zad1/src/: main.c
KotulaMichal/cw05/zad2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  zad2.cbp
KotulaMichal/cw05/zad2/src/: main.c
KotulaMichal/cw05/zad3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  zad3.cbp
KotulaMichal/cw05/zad3/src/: consumer.c  main.c  producer.c
KotulaMichal/cw06/zad1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
KotulaMichal/cw06/zad1/include/common/: common.h
KotulaMichal/cw06/zad1/src/: client.c  server.c
KotulaMichal/cw06/zad1cpp/: CMakeLists.txt
KotulaMichal/cw06/zad1cpp/include/common/: common.hpp
KotulaMichal/cw06/zad1cpp/include/common/message/: message.hpp
KotulaMichal/cw06/zad1cpp/include/common/message/basic/: messages.hpp
KotulaMichal/cw06/zad1cpp/include/common/message/deserializer/: deserializer.hpp
KotulaMichal/cw06/zad1cpp/include/common/message/deserializer/basic/: deserializer.hpp
KotulaMichal/cw06/zad1cpp/include/common/message/deserializer/systemV/: deserializer.hpp
KotulaMichal/cw06/zad1cpp/include/common/message/queue/: queue.hpp
KotulaMichal/cw06/zad1cpp/include/common/message/queue/systemV/: queue.hpp
KotulaMichal/cw06/zad1cpp/include/common/message/systemV/: messages.hpp
KotulaMichal/cw06/zad1cpp/include/common/serialization/: serialization.hpp
KotulaMichal/cw06/zad1cpp/src/: client.cpp  server.cpp
KotulaMichal/cw06/zad1cpp/src/common/: common.cpp
KotulaMichal/cw06/zad1cpp/src/common/message/: message.cpp
KotulaMichal/cw06/zad1cpp/src/common/message/deserializer/basic/: deserializer.cpp
KotulaMichal/cw06/zad1cpp/src/common/message/deserializer/systemV/: deserializer.cpp
KotulaMichal/cw06/zad1cpp/src/common/message/queue/systemV/: queue.cpp
KotulaMichal/cw06/zad2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
KotulaMichal/cw06/zad2/include/common/: common.h
KotulaMichal/cw06/zad2/src/: client.c  server.c
KotulaMichal/cw07/zad1/: CMakeLists.txt
KotulaMichal/cw07/zad1/include/common/: common.h
KotulaMichal/cw07/zad1/src/: manager.c  packer.c  receiver.c  sender.c
KotulaMichal/cw07/zad2/: CMakeLists.txt
KotulaMichal/cw07/zad2/include/common/: common.h
KotulaMichal/cw07/zad2/src/: manager.c  packer.c  receiver.c  sender.c
KotulaMichal/cw08/zad1/src/: main.c
KotulaMichal/cw09/zad1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
KotulaMichal/cw09/zad1/src/: main.c
KotulaMichal/cw10/zad1/: CMakeLists.txt
KotulaMichal/cw10/zad1/include/: common.h  messages.h
KotulaMichal/cw10/zad1/src/: client.c  server.c
KotulaMichal/cw10/zad1cpp/: CMakeLists.txt
KotulaMichal/cw10/zad1cpp/cmake/: common.cmake
KotulaMichal/cw10/zad1cpp/include/: common.hpp
KotulaMichal/cw10/zad1cpp/include/sockets/: all.hpp  common.hpp  defines.hpp  includes.hpp  io_context.hpp  sockets.hpp
KotulaMichal/cw10/zad1cpp/include/sockets/errors/: errors.hpp
KotulaMichal/cw10/zad1cpp/include/sockets/ip/: address.hpp  defines.hpp  endpoint.hpp  ip.hpp
KotulaMichal/cw10/zad1cpp/include/sockets/ip/tcp/: acceptor.hpp  connector.hpp  defines.hpp  endpoint.hpp  protocol.hpp  socket.hpp  tcp.hpp
KotulaMichal/cw10/zad1cpp/src/: client.cpp  server.cpp
KotulaMichal/cw10/zad1cpp/src/sockets/: io_context.cpp
KotulaMichal/cw10/zad1cpp/src/sockets/errors/: errors.cpp
KotulaMichal/cw10/zad1cpp/src/sockets/ip/: address.cpp
KotulaMichal/cw10/zad1cpp/src/sockets/ip/tcp/: acceptor.cpp  connector.cpp  protocol.cpp  socket.cpp
KotulaMichal/cw10/zad2/: CMakeLists.txt
KotulaMichal/cw10/zad2/include/: common.h  messages.h
KotulaMichal/cw10/zad2/src/: client.c  server.c
